Created functionality to display random russian letter

--- a/src/css/components/index.css
+++ b/src/css/components/index.css
@@ -12,7 +12,6 @@
 .sampleTextLink                { @apply underline whitespace-nowrap }
 .sampleTextLink:hover          { @apply text-white bg-lightBlue rounded-1 no-underline }
 
-.sampleTitle                   { @apply text-7 font-bold text-lightBlue mb-2 leading-none }
-@screen 360  {.sampleTitle     { @apply text-3xl }}
-@screen 500  {.sampleTitle     { @apply text-4xl }}
-@screen 640  {.sampleTitle     { @apply text-5xl mb-3 }}
+.button                         { @apply text-10 bg-darkBlue px-6 py-2 rounded-4 text-offWhite mx-4 cursor-pointer select-none }
+.button:hover                   { @apply bg-darkBlue2 bg-opacity-90 text-white }
+.button:active                   { @apply bg-opacity-80 text-white }
