--- a/src/css/components/index.css
+++ b/src/css/components/index.css
@@ -15,3 +15,5 @@
 .button                         { @apply w-64 text-center text-10 bg-darkBlue px-6 py-2 rounded-4 text-offWhite cursor-pointer select-none }
 .button:hover                   { @apply bg-darkBlue2 bg-opacity-90 text-white }
 .button:active                  { @apply bg-opacity-80 text-white }
+
+.playingButton                  { @apply w-64 text-center text-10 bg-darkBlue px-6 py-2 rounded-4 text-offWhite cursor-default select-none}
